force-app/main/default/objects/Opportunity/fields/kVA__c.field-meta.xml
<CustomField>
    <fullName>kVA__c</fullName>
    <label>kVA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>