force-app/main/default/objects/Opportunity/fields/Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change__c</fullName>
    <description>Auto-set by F-08 on every Stage change. Used for pipeline velocity.</description>
    <inlineHelpText>Date the opportunity was last moved to a new stage. Auto-set on every stage change. Used to calculate Days in Stage for pipeline velocity reporting.</inlineHelpText>
    <label>Last Stage Change Date</label>
    <type>Date</type>
</CustomField>