force-app/main/default/objects/Opportunity/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <description>Read-only display of the Account&apos;s Legal Entity Name (English). Sourced live from the Account; if incorrect, the Account record must be updated via RevOps/Finance. (DIG feedback: Legal Entity Name.)</description>
    <formula>Account.Legal_Entity_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The legal entity name (English) from the Account. Read-only — to change it, update the Account record (contact RevOps/Finance).</inlineHelpText>
    <label>Legal Entity Name (English)</label>
    <type>Text</type>
</CustomField>