force-app/main/default/objects/Opportunity/fields/Logo_Type__c.field-meta.xml
<CustomField>
    <fullName>Logo_Type__c</fullName>
    <label>Logo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Logo</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Expansion - Country</fullName>
                <isActive>false</isActive>
                <label>Expansion - Country</label>
            </value>
            <value>
                <fullName>Expansion - Site</fullName>
                <isActive>false</isActive>
                <label>Expansion - Site</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>