force-app/main/default/objects/Opportunity/fields/Loss_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loss_Notes__c</fullName>
    <description>Required when StageName = 9-Lost. Minimum 50 characters enforced by VR-OPP-02.</description>
    <inlineHelpText>Required when marking this opportunity as Lost. Describe what happened, who the customer chose, and any lessons learned. Minimum 50 characters.</inlineHelpText>
    <label>Loss Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>