force-app/main/default/objects/Opportunity/fields/MEDDPICC_Champion__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal advocate with access to Economic Buyer.</description>
    <inlineHelpText>MEDDPICC: The internal advocate who supports DE and has access to the Economic Buyer. Link to the contact record who is your champion at this account.</inlineHelpText>
    <label>Champion (C)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Champion_Opps</relationshipName>
    <type>Lookup</type>
</CustomField>