force-app/main/default/objects/Opportunity/fields/MEDDPICC_Competition__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Competition__c</fullName>
    <description>Competitors and their positioning.</description>
    <inlineHelpText>MEDDPICC: Who else is the customer evaluating and how are they positioned? Describe competitors in consideration and DE&apos;s competitive differentiation.</inlineHelpText>
    <label>Competition (C)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>