force-app/main/default/objects/Opportunity/fields/MEDDPICC_Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Decision_Criteria__c</fullName>
    <description>How customer evaluates and selects a vendor.</description>
    <inlineHelpText>MEDDPICC: What factors does the customer use to evaluate and select a data center provider? Capture the formal and informal criteria they have shared.</inlineHelpText>
    <label>Decision Criteria (D)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>