force-app/main/default/objects/Opportunity/fields/MEDDPICC_Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Decision_Process__c</fullName>
    <description>How customer makes the buying decision.</description>
    <inlineHelpText>MEDDPICC: How does this customer make a buying decision? Capture the steps, approvals, timelines, and people involved in selecting a vendor.</inlineHelpText>
    <label>Decision Process (D)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>