force-app/main/default/objects/Opportunity/fields/MEDDPICC_Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Economic_Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual with final budget authority.</description>
    <inlineHelpText>MEDDPICC: The person with final budget authority for this deal. Link to the contact record of the individual who can sign off on the investment.</inlineHelpText>
    <label>Economic Buyer (E)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>EB_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>