force-app/main/default/objects/Opportunity/fields/MEDDPICC_Economic_Buyer_Status__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Economic_Buyer_Status__c</fullName>
    <inlineHelpText>MEDDPICC confidence level for Economic Buyer. 2 - Known and Confirmed means you have met and engaged the person who controls the budget for this deal.</inlineHelpText>
    <label>Economic Buyer - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Unknown</fullName>
                <default>true</default>
                <label>0 - Unknown</label>
            </value>
            <value>
                <fullName>1 - Known but Unconfirmed</fullName>
            </value>
            <value>
                <fullName>2 - Known and Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>