force-app/main/default/objects/Opportunity/fields/MEDDPICC_Metrics__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Metrics__c</fullName>
    <description>Quantifiable value to customer.</description>
    <inlineHelpText>MEDDPICC: What measurable business outcomes does the customer expect? Capture KPIs, cost savings, or performance targets that justify their investment in Digital Edge.</inlineHelpText>
    <label>Metrics (M)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>