force-app/main/default/objects/Opportunity/fields/MEDDPICC_Pain__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Pain__c</fullName>
    <description>The business problem the customer is trying to solve.</description>
    <inlineHelpText>MEDDPICC: What specific operational or business problem is driving this deal? Describe the pain in the customer&apos;s own words - capacity constraints, latency, reliability, or cost issues.</inlineHelpText>
    <label>Identify Pain (I)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>