force-app/main/default/objects/Opportunity/fields/MEDDPICC_Pain_Status__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Pain_Status__c</fullName>
    <inlineHelpText>MEDDPICC confidence level for Identify Pain. 2 - Known and Confirmed means the customer has explicitly articulated the pain and agreed it is the primary driver for this deal.</inlineHelpText>
    <label>Pain - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Unknown</fullName>
                <default>true</default>
                <label>0 - Unknown</label>
            </value>
            <value>
                <fullName>1 - Known but Unconfirmed</fullName>
            </value>
            <value>
                <fullName>2 - Known and Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>