force-app/main/default/objects/Opportunity/fields/MEDDPICC_Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Paper_Process__c</fullName>
    <description>Legal and procurement steps to execute the contract.</description>
    <inlineHelpText>MEDDPICC: What steps are required to get the contract signed? Capture procurement, legal review, KYC, board approvals, and any other steps between verbal agreement and executed SOF.</inlineHelpText>
    <label>Paper Process (P)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>