force-app/main/default/objects/Opportunity/fields/MEDDPICC_Paper_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Paper_Process_Status__c</fullName>
    <inlineHelpText>MEDDPICC confidence level for Paper Process. 2 - Known and Confirmed means you have a complete map of all steps and estimated timelines to get the SOF fully executed.</inlineHelpText>
    <label>Paper Process - Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Unknown</fullName>
                <default>true</default>
                <label>0 - Unknown</label>
            </value>
            <value>
                <fullName>1 - Known but Unconfirmed</fullName>
            </value>
            <value>
                <fullName>2 - Known and Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>