force-app/main/default/objects/Opportunity/fields/MEDDPICC_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Weighted_Score__c</fullName>
    <description>Phase 1 placeholder; equals raw score until weights are configured.</description>
    <formula>MEDDPICC_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reserved for future weighted scoring model. Currently equals the raw MEDDPICC Score. Read-only.</inlineHelpText>
    <label>MEDDPICC Weighted Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>