force-app/main/default/objects/Opportunity/fields/Metered_Power_Charges__c.field-meta.xml
<CustomField>
    <fullName>Metered_Power_Charges__c</fullName>
    <description>Whether metered power charges are pass-through or not applicable.</description>
    <label>Metered Power Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass-through</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>