force-app/main/default/objects/Opportunity/fields/Metric_Category__c.field-meta.xml
<CustomField>
    <fullName>Metric_Category__c</fullName>
    <label>Metric Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Growth</fullName>
            </value>
            <value>
                <fullName>Cost Reduction</fullName>
            </value>
            <value>
                <fullName>Risk Mitigation</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Scalability</fullName>
            </value>
            <value>
                <fullName>Time to Market</fullName>
            </value>
            <value>
                <fullName>Competitive Advantage</fullName>
            </value>
            <value>
                <fullName>Digital Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>