force-app/main/default/objects/Opportunity/fields/Migration_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Source_Id__c</fullName>
    <description>Odoo external ID for this Opportunity record. Used as external ID key during data migration from Odoo. Do not update after go-live.</description>
    <externalId>true</externalId>
    <label>Migration Source ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>