force-app/main/default/objects/Opportunity/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <description>Salesperson&apos;s estimated MRC. For Change Orders and Renewals: net incremental/decremental value. Negative for Price Decrease and Churn.</description>
    <inlineHelpText>Estimated monthly revenue for this deal. For Change Orders and Renewals, enter the net change (negative for churn or price decreases). Used for booking and pipeline reporting.</inlineHelpText>
    <label>Monthly Recurring Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>