force-app/main/default/objects/Opportunity/fields/MRC_Local__c.field-meta.xml
<CustomField>
    <fullName>MRC_Local__c</fullName>
    <description>Monthly Recurring Charge in the customer&apos;s local currency. Multiply by FX Rate (to USD) to get MRC (USD).</description>
    <label>MRC (Local Currency) (Not Used)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>