force-app/main/default/objects/Opportunity/fields/MRC_USD__c.field-meta.xml
<CustomField>
    <fullName>MRC_USD__c</fullName>
    <description>Monthly Recurring Charge in USD. Computed as MRC (Local Currency) / FX Rate (to USD). Read-only.</description>
    <formula>IF(
  OR(ISBLANK(FX_Rate__c), FX_Rate__c = 0),
  NULL,
  MRC__c / FX_Rate__c
)</formula>
    <label>MRC (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>