force-app/main/default/objects/Opportunity/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <description>Total NRC estimate. Excluded from TCV and Amount. Tracked separately for reporting.</description>
    <inlineHelpText>One-time charges such as installation fees or fit-out costs. Excluded from TCV and the Amount field - tracked separately for finance reporting.</inlineHelpText>
    <label>Non-Recurring Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>