force-app/main/default/objects/Opportunity/fields/NRC_Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>NRC_Actual_Cost__c</fullName>
    <description>Actual expenditure tracked by Operations after delivery.</description>
    <label>NRC Actual Cost (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>