force-app/main/default/objects/Opportunity/fields/NRC_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>NRC_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Finance/Product Ops approver who signed off the NRC budget.</description>
    <label>NRC Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NRC_Approved_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>