force-app/main/default/objects/Opportunity/fields/NRC_Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>NRC_Budget_Approved__c</fullName>
    <description>Approved NRC budget from Deal Review.</description>
    <label>NRC Budget Approved (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>