force-app/main/default/objects/Opportunity/fields/NRC_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>NRC_Cost_Centre__c</fullName>
    <description>Internal cost centre that absorbs the approved NRC spend.</description>
    <label>NRC Cost Centre</label>
    <length>50</length>
    <type>Text</type>
</CustomField>