force-app/main/default/objects/Opportunity/fields/NRC_Local__c.field-meta.xml
<CustomField>
    <fullName>NRC_Local__c</fullName>
    <description>Non-Recurring Charge in the customer&apos;s local currency. Multiply by FX Rate (to USD) to get NRC (USD).</description>
    <label>NRC (Local Currency) (Not Used)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>