force-app/main/default/objects/Opportunity/fields/NRC_USD__c.field-meta.xml
<CustomField>
    <fullName>NRC_USD__c</fullName>
    <description>Non-Recurring Charge in USD. Computed as NRC (Local Currency) / FX Rate (to USD). Read-only.</description>
    <formula>IF(
  OR(ISBLANK(FX_Rate__c), FX_Rate__c = 0),
  NULL,
  NRC__c / FX_Rate__c
)</formula>
    <label>NRC (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>