force-app/main/default/objects/Opportunity/fields/NRC_Variance__c.field-meta.xml
<CustomField>
    <fullName>NRC_Variance__c</fullName>
    <description>Positive = over budget.</description>
    <formula>NRC_Actual_Cost__c - NRC_Budget_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NRC Variance (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>