force-app/main/default/objects/Opportunity/fields/Operation_Country__c.field-meta.xml
<CustomField>
    <fullName>Operation_Country__c</fullName>
    <description>Primary DE market for this deal. Determines country sales team, pricebook, and BAN currency.</description>
    <inlineHelpText>The Digital Edge country market for this deal. Drives pricebook, billing currency, and routing to the correct country sales team.</inlineHelpText>
    <label>Operation Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Korea</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Indonesia</fullName>
            </value>
            <value>
                <fullName>Philippines</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Thailand</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>