force-app/main/default/objects/Opportunity/fields/Operation_Metro__c.field-meta.xml
<CustomField>
    <fullName>Operation_Metro__c</fullName>
    <label>Operation Metro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>