force-app/main/default/objects/Opportunity/fields/Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number__c</fullName>
    <description>Auto-generated format {YY}{5-digit sequence} (e.g. 2600001). Set by Opportunity_BeforeSave_SetOpportunityNumber flow on insert. Update formula_YearPrefix in that flow annually.</description>
    <inlineHelpText>System-generated unique reference in format YY-NNNNN (e.g. 26-00001). Set automatically on creation. Do not edit manually.</inlineHelpText>
    <label>Opportunity Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>