force-app/main/default/objects/Opportunity/fields/Opportunity_Number_Group__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Number_Group__c</fullName>
    <label>Opportunity Number Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>