force-app/main/default/objects/Opportunity/fields/Ops_Contact__c.field-meta.xml
<CustomField>
    <fullName>Ops_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ops Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Ops Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>