force-app/main/default/objects/Opportunity/fields/Ops_Cost_Status__c.field-meta.xml
<CustomField>
    <fullName>Ops_Cost_Status__c</fullName>
    <description>Required = Completed at Stage 4 for non-standard opportunities.</description>
    <inlineHelpText>Operations cost review gate for non-standard deals. Must reach Completed before Stage 4 progression. Set to Not Required for standard colocation deals.</inlineHelpText>
    <label>Ops Cost Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>