force-app/main/default/objects/Opportunity/fields/Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Order Contact)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>