force-app/main/default/objects/Opportunity/fields/Order_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact_Email__c</fullName>
    <formula>Order_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Contact Email</label>
    <type>Text</type>
</CustomField>