force-app/main/default/objects/Opportunity/fields/Order_Source__c.field-meta.xml
<CustomField>
    <fullName>Order_Source__c</fullName>
    <label>Order Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
                <default>true</default>
                <label>SFDC</label>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>BOSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>