force-app/main/default/objects/Opportunity/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated on Change Orders and Renewals to link back to the original confirmed Order.</description>
    <inlineHelpText>For Change Orders and Renewals, link to the original confirmed Order that this opportunity is amending or renewing. Leave blank for new business.</inlineHelpText>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipName>Change_Order_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>