force-app/main/default/objects/Opportunity/fields/Originating_Lead__c.field-meta.xml
<CustomField>
    <fullName>Originating_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to source Lead on conversion by F-04. Used for attribution reporting.</description>
    <inlineHelpText>Auto-populated on Lead conversion. Links this Opportunity back to the source Lead for attribution and pipeline source reporting. Do not edit manually.</inlineHelpText>
    <label>Originating Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Originated_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>