force-app/main/default/objects/Opportunity/fields/OTM_QR_Pct__c.field-meta.xml
<CustomField>
    <fullName>OTM_QR_Pct__c</fullName>
    <label>OTM QR %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>